--- a/.env
+++ b/.env
@@ -26,3 +26,12 @@ APP_SECRET=8e88cc8e63a404d784e2441f3d26dac8
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/menukarte?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"ph
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
